--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ margin-left: 5px;
 }
 
 .main{
-	text-align: -webkit-center;
+	text-align:center;
 	margin-top: 15%;
 	font-family: arial,sans-serif;
 	
